--- a/views/thankYou.html
+++ b/views/thankYou.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>QR Bell</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     <style>
         .before_call{
             width: 100%;
@@ -13,8 +14,9 @@
             position: absolute;
         }
     </style>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="margin:16;padding:0">
 <div id="thankYouBlock">
 <h1 style="font-size: 10vw; font-weight: 700;">Thank you <span id="qr_bell_owner"></span></h1>
 </div>
@@ -53,6 +55,25 @@
     <div>
         <img id="qrCodeImage" src="">
     </div>
+    <div class="row">
+        <div class="container">
+            <button class="btn btn-primary pull-left">Download PDF</button>
+            <button class="btn btn-primary pull-right">Order Print</button>
+        </div>
+    </div>
+</div>
+
+<div id="licenseBlock">
+    <p id="freeTrialMsg" style="font-size: 5vw;">Your unlimited free trial has been activated for 30 days, which is going to expire on <span id="trialExpiryDate"></span>.</p>
+    <p id="trialExpiredMsg">
+        Your trial has expired, hope you enjoyed the QrBell, if you would like to continue the service, please get your premium license
+    </p>
+    <p id="getLicenseMsg">You can get you lifetime premium license by paying a very nominal support amount !</p>
+    <button id="getLicenseButton">Get License</button>
+</div>
+
+<div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
@@ -64,6 +85,19 @@ window.onload = getName();
 window.onload = getQrCode();
 window.onload = hideBlock();
 window.onload = peerSetup();
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3803818363915023"
+        crossorigin="anonymous"></script>
+<!-- MyAds -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3803818363915023"
+     data-ad-slot="7004547652"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
 </body>
