--- a/views/thankYou.html
+++ b/views/thankYou.html
@@ -15,6 +15,7 @@
         }
     </style>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body style="margin:16;padding:0">
 <div id="thankYouBlock">
