--- a/views/welcome.html
+++ b/views/welcome.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>QR Bell Owner</title>
 </head>
 <body style="margin:16px;padding:10px">
